[workspace]
members = [
  "basic-project",
  "duck-hunt-server",
  "duck-hunt-shared",
  "duck-hunt-client"
]
# default-run = "basic-project"
default-members = [
  "basic-project"
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
duck-hunt-shared = { path = "./duck-hunt-shared" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

